--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,22 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+GOOGLE_SITE_VERIFICATION=
+
+BASE_CURRENCY=
+BASE_CURRENCY_SYMBOL=
+
+ADMIN_EMAIL=
+
+#PayPal API Mode
+# Values: sandbox or live (Default: live)
+PAYPAL_MODE=sandbox
+
+#PayPal Setting & API Credentials - sandbox
+PAYPAL_SANDBOX_CLIENT_ID=
+PAYPAL_SANDBOX_CLIENT_SECRET=
+
+#PayPal Setting & API Credentials - live
+PAYPAL_LIVE_CLIENT_ID=
+PAYPAL_LIVE_CLIENT_SECRET=
