--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "srmklive/paypal": "~3.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.13",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
